15701 vr: the comparison will always evaluate as 'false' Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Approved by: Dan McDonald <danmcd@mnx.io>